# hasaisa

./: CMakeLists.txt  Dockerfile  Makefile
.github/workflows/: c-cpp.yml
docker/: Makefile
examples/: .gdb_history  CMakeLists.txt  example.cpp  example.h  gdb.txt  main.cpp
src/: CMakeLists.txt  flexibleObjects.hpp  logging.hpp
tests/: CMakeLists.txt  NamedPropertyTests.cpp
